RESOLVED FIXED270441
Display capture Safari muting UI is broken if UseSCContentSharingPicker is false
https://bugs.webkit.org/show_bug.cgi?id=270441
Summary Display capture Safari muting UI is broken if UseSCContentSharingPicker is false
youenn fablet
Reported 2024-03-04 06:37:14 PST
Display capture Safari muting UI is broken if UseSCContentSharingPicker is false
Attachments
youenn fablet
Comment 1 2024-03-04 06:37:26 PST
youenn fablet
Comment 2 2024-03-04 07:02:11 PST
EWS
Comment 3 2024-03-04 09:17:27 PST
Committed 275627@main (704de66ba7cb): <https://commits.webkit.org/275627@main> Reviewed commits have been landed. Closing PR #25410 and removing active labels.
Chris Dumez
Comment 4 2024-03-04 11:08:04 PST
Note You need to log in before you can comment on or make changes to this bug.